--- a/TestsByKonrad.csproj
+++ b/TestsByKonrad.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="WebDriver.ChromeDriver.win32" Version="88.0.4324.96" />
+    <PackageReference Include="WebDriverManager" Version="2.11.1" />
   </ItemGroup>
 
 </Project>
